--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,12 @@
     "host_permissions": [
         "https://*/*"
     ],
-    "permissions": ["activeTab", 
-                    "scripting",
-                    "tabs"],
+    "permissions": [
+        "activeTab", 
+        "storage",
+        "scripting",
+        "tabs"
+    ],
     "action": {
         "default_popup": "popup.html"
       },
@@ -17,5 +20,11 @@
         "matches": ["<all_urls>"],
         "js": ["content.js"]
         }
-    ]
+    ],
+    "icons": {
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+      }
   }
