--- a/manifest.json
+++ b/manifest.json
@@ -10,15 +10,17 @@
         "activeTab", 
         "storage",
         "scripting",
-        "tabs"
+        "tabs",
+        "background"
     ],
     "action": {
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": "icons/icon16.png"
       },
     "content_scripts": [
         {
         "matches": ["<all_urls>"],
-        "js": ["content.js"]
+        "js": ["auto.js"]
         }
     ],
     "icons": {
